<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="address">Enter Address Here</string>
    <string name="app_name">WebAndMobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="option1">Red</string>
    <string name="option2">Blue</string>
    <string name="option3">Green</string>
    <string name="propagate">Propagate</string>
    <string name="send">Send</string>
    <string-array name="colors">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>
</resources>
